# Design-and-implement-an-end-to-end-blockhain-monitoring-framework

./: Dockerfile.cpp  README.md  docker-compose.yml
bitcoin-data/: .cookie  peers.db05
bitcoin-data/chainstate/: 000005.ldb
config/: bitcoin.conf
cpp-daemon/: CMakeLists.txt  ecdsa_parser.cpp  ecdsa_parser.h  stats_engine.cpp  stats_engine.h  zmq_subscriber.cpp
python-controller/: Dockerfile  anomaly_analyzer.py  dashboard.py  fastapi_server.py  grpc_service.proto  grpc_service_pb2.py  grpc_service_pb2_grpc.py  influx_writer.py  main.py  ml_model.py  requirements.txt
python-controller/templates/: index.html
report/: technical_report.md
venv-ml/: pyvenv.cfg
venv-ml/Scripts/: activate  activate.bat
